--- a/ImpetusWebSite-main/ImpetusWebsite/ImpetusWebsite/ImpetusWebsite.csproj
+++ b/ImpetusWebSite-main/ImpetusWebsite/ImpetusWebsite/ImpetusWebsite.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\ApiControllers\NewFolder\" />
+  </ItemGroup>
+
 
 
 </Project>
